syntax = "proto3";

package data;

/* data exchanged with python wavelet transform script */

message ImageRow {
    repeated float values = 1;
}

message ImageData {
    repeated ImageRow rows = 1;
}

message PythonDWT {
    string mode = 1;
    ImageData data = 2;
}

/* algorithm headers */

enum Subsampling {
    SUBSAMPLING_410 = 0;
    SUBSAMPLING_420 = 1;
    SUBSAMPLING_422 = 2;
}

enum WaveletAlgo {
    HAAR = 0;
    DAUBECHIES = 1;
}

message WaveletHaar {
    uint32 level = 1;
}

message WaveletDaubechies {
    uint32 level = 1;
    uint32 coefficient = 2;
}

enum QuantifierAlgo {
    DEADZONE = 0;
}

message QuantifierDeadZone {
    uint32 width = 1;
    uint32 delta = 2;
    float offset = 3;
}

message QuantifierConfig {
    oneof data {
        QuantifierDeadZone dead_zone = 2;
    }
}

/* file image format */

message FileImageLayer {
    repeated bytes rows = 1;
}

message FileImageHeader {
    uint32 width = 1;
    uint32 height = 2;

    Subsampling subsampling = 3;
    
    WaveletAlgo wavelet_type = 10;
    oneof wavelet_type_data {
        WaveletHaar wavelet_haar = 11;
        WaveletDaubechies wavelet_daubechies = 12;
    }

    QuantifierConfig quantifier = 4;
}

message FileImageData {
    FileImageLayer y = 1;
    FileImageLayer u = 2;
    FileImageLayer v = 3;
}

message FileImage {
    FileImageHeader header = 1;
    FileImageData data = 2;
}
