syntax = "proto3";

package data;

/* data exchanged with python wavelet transform script */

message ProtoImageRow {
    repeated float values = 1;
}

message ProtoImageData {
    repeated ProtoImageRow rows = 1;
}

message ProtoDWT {
    string mode = 1;
    ProtoImageData data = 2;
}

/* algorithm headers */

enum WaveletAlgo {
    HAAR = 0;
    DAUBECHIES = 1;
}

enum QuantifierAlgo {
    DEADZONE = 0;
}

enum CompressorAlgo {
    LZW = 0;
}

/* file image format */

message FileImageLayer {
    repeated bytes rows = 1;
}

message FileImageHeader {
    uint32 width = 1;
    uint32 height = 2;
}

message FileImageData {
    FileImageLayer y = 1;
    FileImageLayer u = 2;
    FileImageLayer v = 3;
}

message FileImage {
    FileImageHeader header = 1;
    FileImageData data = 2;
}
